[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp-server"
version = "0.1.0"
description = "A lightweight MCP server wrapping the Slack Web API for sending messages via a bot token."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
slack-mcp-server = "slack_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
